# stitcher

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/calibrate/: CMakeLists.txt  calibrate.cpp  sample_dataset.json
apps/stitch/: CMakeLists.txt  sample_calibration.json  sample_dataset.json  stitch.cpp
docker/: Dockerfile.dev-amd64  Dockerfile.prod-amd64
docker/dependencies/: install_boost.sh  install_cmake.sh  install_opencv.sh
modules/calibration/: CMakeLists.txt
modules/calibration/include/calibration/: calibrator.h
modules/calibration/src/: calibrator.cpp
modules/core/: CMakeLists.txt
modules/core/include/core/: camera.h  camerastream.h  cvcamera.h  math.h  streambundler.h
modules/core/src/: camera.cpp  camerastream.cpp  cvcamera.cpp  math.cpp  streambundler.cpp
modules/dataloader/: CMakeLists.txt
modules/dataloader/include/dataloader/: dataloader.h
modules/dataloader/src/: dataloader.cpp
modules/stitching/: CMakeLists.txt
modules/stitching/include/stitching/: blender.h  exposurecompensator.h  gammacorrector.h  histogramequal.h  seamfinder.h  stitcher.h
modules/stitching/src/: blender.cpp  exposurecompensator.cpp  gammacorrector.cpp  histogramequal.cpp  seamfinder.cpp  stitcher.cpp
tests/: CMakeLists.txt  test_calibrate.cpp  test_stitch.cpp
tests/assets/: test_dataset.json  test_extrinsic_calib.json  test_intrinsic_calib.json
tests/python/: requirements_test.txt
tests/utils/: paths.h.in
